Alpha 0.1.8.28
- Fixed chains not rotating when they should. Thanks, @Sorienrot, for the bug report!
- Fixed "/listplayerdoors <player>" always sending its result to the server, even if it was issued by a player.

Alpha 0.1.8.27
- Added support for version 1.16.4 of Minecraft.
- New command: "/listplayerdoors <player>". This command will list all doors owned by the given player. Permission: "bigdoors.admin.listplayerdoors".
- Fixed build permission checking issues for PlotSquared roads. Affects all supported versions of PlotSquared (3-5). Thanks, @xTronix, for the bug report!
- Made the format of log messages regarding a bit more consistent. Thanks, @SlimeDog, for the suggestion!
- Added commands: "/bigdoors disabletoggle" and "/bigdoors enabletoggle" to disable all door toggles on the server. Disabletoggle also cancels any toggles active when it is called. Permission for both: "bigdoors.admin.disabletoggle". Thanks, @SlimeDog, for the suggestion!

Alpha 0.1.8.26
- Added method to get all available doors. Thanks, @Chojo, for the implementation.
- Renamed the permission node for changing door direction to "bigdoors.user.direction" so it works with "bigdoors.user.*". Thanks, @Hydridity, for the bug report!

Alpha 0.1.8.25
- Added support for version 1.16.2 of Minecraft.
- Added support for PlotSquared v5 (in addition to v3 and v4). Thanks, @xTronix, for the bug report!
- The update-checker will no longer read the hash of the file if it's not needed; it only reads it right before downloading the latest update now. Thanks, @SlimeDog, for the report! 
- Fixed fast doors (e.g. very small ones) getting toggled twice by the same button. Thanks, @Wolf2323, for the bug report!

Alpha 0.1.8.24
- Fixed powerblock cache not being invalidated when creating a new door (so you couldn't use it). The cache is now also invalidated when removing doors. Thanks, @PirateCraft, for the bug report!