@@ -125,7 +125,7 @@
         <dependency>
             <groupId>org.bstats</groupId>
             <artifactId>bstats-bukkit</artifactId>
-            <version>1.2</version>
+            <version>1.7</version>
         </dependency>
         
         <!-- Towny -->
