@@ -1,6 +1,7 @@
 Alpha 0.1.8.28
 - Fixed chains not rotating when they should. Thanks, @Sorienrot, for the bug report!
-- Fixed "/listplayerdoors <player>" always sending its result to the server, even if it was issued by a player.
+- Fixed "/listplayerdoors <player>" always sending its result to the server, even if it was issued by a player. Thanks, @Minecreeper.Isi, for the bug report!
+- Made audio range configureable. Thanks, @OverDhill, for the suggestion!
 
 Alpha 0.1.8.27
 - Added support for version 1.16.4 of Minecraft.
